--- a/_posts/2024-10-05-Homepage.md
+++ b/_posts/2024-10-05-Homepage.md
@@ -4,9 +4,8 @@ layout: post
 post-image: /assets/images/NewHomepage.jpg
 description: We are happy to announce that our first Homepage is live now.
 tags:
-- sample
-- post
-- test
+- Homepage
+- Metal
 ---
 
 Please enjoy our new homepage [here](https://www.the-royal-flash.de){:target="blank"} - soon we will add sequently new updates & material. Therefore you can already check our Facebook & Youtube Pages! 
