--- a/_posts/2024-12-01-NewLogo.md
+++ b/_posts/2024-12-01-NewLogo.md
@@ -2,7 +2,7 @@
 layout: post
 title: Pictures, New Logo and Design
 date: 2024-12-12 21:54
-post-image: /assets/images/Foto1.jpg
+post-image: /assets/images/Foto1.JPG
 description: The flash is coming down ... 
 tags: 
 - Homepage
